objects/Marketo_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>Marketo's Campaign ID field.</description>
        <externalId>true</externalId>
        <label>Campaign ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Time_of_Last_Sync_With_Marketo__c</fullName>
        <label>Date Time of Last Sync With Marketo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketo Campaign</label>
    <nameField>
        <label>Marketo Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketo Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Name__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>